dirty redirect for shop page

--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ License:            GNU General Public License v2 or later
 .entry-thumb {
 	min-height: 170px !important;
 }
+
+/*.single_add_to_cart_button {
+	width: 320px;
+	height: 150px;
+	background: #5F87D1;
+}*/
